added default values for silver materials, ore gen, etc.

--- a/src/main/resources/assets/onlysilver/lang/en_us.json
+++ b/src/main/resources/assets/onlysilver/lang/en_us.json
@@ -40,7 +40,10 @@
     "onlysilver.options.title": "%s %s",
     "onlysilver.options.default": "%s: %s",
     "onlysilver.options.ore_generation": "Ore Generation",
-    "onlysilver.options.silver_gendefaults": "Silver Gen. Defaults",
+    "onlysliver.options.silver_vein_size": "SilverVeinSize",
+    "onlysliver.options.silver_vein_count": "SilverVeinCount",
+    "onlysliver.options.silver_min_height": "SilverBottomHeight",
+    "onlysliver.options.silver_max_height": "SilverMaxHeight",
     "onlysilver.options.dimensions": "Dimensions",
     "onlysilver.options.enchantments": "Enchantments",
     "onlysilver.options.stats": "Stats",
