fixed up paths to textures, models

--- a/src/main/resources/assets/onlysilver/lang/en_us.json
+++ b/src/main/resources/assets/onlysilver/lang/en_us.json
@@ -4,6 +4,7 @@
     "block.onlysilver.silver_ore": "Silver Ore",
     "block.onlysilver.silver_block": "Silver Block",
     "item.onlysilver.silver_ingot": "Silver Ingot",
+    "item.onlysilver.silver_nugget": "Silver Nugget",
     "item.onlysilver.silver_rod": "Silver Rod",
     "item.onlysilver.silver_pick": "Silver Pickaxe",
     "item.onlysilver.silver_axe": "Silver Axe",
