--- a/src/main/resources/assets/onlysilver/lang/en_us.json
+++ b/src/main/resources/assets/onlysilver/lang/en_us.json
@@ -6,13 +6,13 @@
     "item.onlysilver.silver_ingot": "Silver Ingot",
     "item.onlysilver.silver_nugget": "Silver Nugget",
     "item.onlysilver.silver_rod": "Silver Rod",
-    "item.onlysilver.silver_pick": "Silver Pickaxe",
+    "item.onlysilver.silver_pickaxe": "Silver Pickaxe",
     "item.onlysilver.silver_axe": "Silver Axe",
     "item.onlysilver.silver_shovel": "Silver Shovel",
     "item.onlysilver.silver_sword": "Silver Sword",
     "item.onlysilver.silver_hoe": "Silver Hoe",
     "item.onlysilver.silver_bow": "Silver Bow",
-    "item.onlysilver.silver_helm": "Silver Helmet",
+    "item.onlysilver.silver_helmet": "Silver Helmet",
     "item.onlysilver.silver_chestplate": "Silver Chestplate",
     "item.onlysilver.silver_leggings": "Silver Leggings",
     "item.onlysilver.silver_boots": "Silver Boots",
