adding silver golem entity & spawn egg

--- a/src/main/resources/assets/onlysilver/lang/en_us.json
+++ b/src/main/resources/assets/onlysilver/lang/en_us.json
@@ -16,6 +16,7 @@
     "item.onlysilver.silver_chestplate": "Silver Chestplate",
     "item.onlysilver.silver_leggings": "Silver Leggings",
     "item.onlysilver.silver_boots": "Silver Boots",
+    "item.onlysilver.silver_golem_egg": "Silver Golem Egg",
 
     "_comment": "Enchantments",
     "enchantment.onlysilver.silver_aura": "Silver Aura",
