added silver_wand recipes, item; added skeleton SilverWandItem class.

--- a/src/main/resources/assets/onlysilver/lang/en_us.json
+++ b/src/main/resources/assets/onlysilver/lang/en_us.json
@@ -6,6 +6,7 @@
     "item.onlysilver.silver_ingot": "Silver Ingot",
     "item.onlysilver.silver_nugget": "Silver Nugget",
     "item.onlysilver.silver_rod": "Silver Rod",
+    "item.onlysilver.silver_wand": "Silver Wand",
     "item.onlysilver.silver_pickaxe": "Silver Pickaxe",
     "item.onlysilver.silver_axe": "Silver Axe",
     "item.onlysilver.silver_shovel": "Silver Shovel",
