first attempt at implementing Silver_Aura, aka Everlasting enchantment

--- a/src/main/resources/assets/onlysilver/lang/en_us.json
+++ b/src/main/resources/assets/onlysilver/lang/en_us.json
@@ -20,7 +20,7 @@
     "item.onlysilver.silver_golem_egg": "Silver Golem Egg",
 
     "_comment": "Enchantments",
-    "enchantment.onlysilver.silver_aura": "Silver Aura",
+    "enchantment.onlysilver.silver_aura": "Everlasting",
     "enchantment.onlysilver.incantation": "Incantation",
 
     "_comment": "Tooltips",
